<resources>
    <!-- App details string resources -->
    <string name="app_name">Currency Converter</string>
    <string name="second_activity_name">Select Currency</string>

    <!-- content description -->
    <string name="content_description">hi, this is a content description</string>

    <!-- string resources for button text -->
    <string name="buttonC">C</string>
    <string name="buttonMod">%</string>
    <string name="buttonX">X</string>
    <string name="buttonDiv">/</string>
    <string name="button7">7</string>
    <string name="button8">8</string>
    <string name="button9">9</string>
    <string name="buttonMul">*</string>
    <string name="button4">4</string>
    <string name="button5">5</string>
    <string name="button6">6</string>
    <string name="buttonMinus">-</string>
    <string name="button1">1</string>
    <string name="button2">2</string>
    <string name="button3">3</string>
    <string name="buttonAdd">+</string>
    <string name="button00">00</string>
    <string name="button0">0</string>
    <string name="button.">.</string>
    <string name="buttonEq">=</string>
    
    <!-- Dimensions for drawable resource images -->
    <string name="high">m801.72,488.8 l0.26,-0.18c-0.03,-0.06 -0.81,-1.15 -2.81,-1.15 -0.22,0 -0.43,0.02 -0.68,0.04 -1.24,0.13 -2.49,0.7 -3.48,1.45 -0.99,0.74 -1.73,1.67 -1.89,2.62 -0.06,0.39 -0.09,0.93 -0.1,1.54 0.01,1.06 0.1,2.33 0.32,3.45 0.24,1.13 0.55,2.1 1.19,2.58 0.9,0.64 1.98,1.08 3.4,1.07 0.68,0 1.44,-0.1 2.28,-0.31 0.71,-0.18 2,-0.81 3.58,-1.66 4.75,-2.54 12.07,-7.05 12.07,-7.05 0.13,-0.08 0.19,-0.25 0.13,-0.4 -0.06,-0.14 -0.21,-0.23 -0.36,-0.19 0,0 -1.53,0.32 -3.32,0.71 -0.33,0.07 -0.66,0.11 -0.98,0.11 -0.62,0 -1.2,-0.12 -1.61,-0.24 -0.21,-0.06 -0.38,-0.12 -0.49,-0.16l-0.13,-0.06 -0.04,-0.01c-0.13,-0.06 -0.28,-0.03 -0.38,0.07l-0.07,0.08c-0.35,0.37 -1.92,1.9 -3.57,2.15 -0.2,0.03 -0.39,0.05 -0.55,0.05 -0.71,-0.02 -1.1,-0.24 -1.42,-0.58 -0.3,-0.33 -0.51,-0.78 -0.67,-1.21 -0.17,-0.43 -0.27,-1.12 -0.31,-1.7 -0.05,-0.57 -0.05,-1.03 -0.05,-1.04l-0.06,-0.18 -0.26,0.18h-0.32c0,0.01 0,0.49 0.05,1.09 0.05,0.61 0.14,1.33 0.35,1.88 0.18,0.43 0.4,0.97 0.8,1.42 0.41,0.45 1.04,0.78 1.89,0.78 0.2,0 0.42,-0.03 0.65,-0.06 2.21,-0.36 3.99,-2.42 4.02,-2.43l-0.24,-0.22 -0.13,0.3c0.02,0 1.12,0.52 2.53,0.52 0.36,0 0.74,-0.04 1.11,-0.12 1.79,-0.39 3.31,-0.71 3.32,-0.71l-0.07,-0.32 -0.16,-0.27s-0.82,0.5 -2.07,1.27c-1.89,1.15 -4.78,2.87 -7.44,4.37 -1.32,0.75 -2.6,1.44 -3.65,1.98 -1.04,0.54 -1.89,0.91 -2.31,1.02 -0.81,0.21 -1.52,0.3 -2.13,0.3 -1.28,-0.01 -2.21,-0.38 -3.03,-0.96 -0.35,-0.22 -0.72,-1.1 -0.92,-2.16 -0.21,-1.07 -0.31,-2.32 -0.31,-3.34 0,-0.59 0.03,-1.11 0.09,-1.44 0.1,-0.67 0.72,-1.52 1.64,-2.21 0.91,-0.69 2.07,-1.21 3.18,-1.33 0.21,-0.02 0.41,-0.03 0.61,-0.03 0.87,0 1.45,0.23 1.81,0.45 0.18,0.11 0.31,0.22 0.38,0.29l0.08,0.1 0.01,0.02 0.27,-0.19h-0.32,0.32z</string>
    
    <!-- Other String resources -->
    <string name="country">US Dollar USD</string>
    <string name="amount">100</string>
    <string name="data_provider">Data provided by the API provider</string>
    <string name="refresh">Refresh completed</string>

</resources>