<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg_color"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/linearlayout2"
                style="@style/LinearLayoutStyle"
                app:layout_constraintVertical_weight="2.5"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/linearlayout3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <Button
                    android:id="@+id/button7"
                    style="@style/ButtonStyle"
                    android:text="@string/button7"
                    app:layout_constraintHorizontal_weight="2.5"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/button8"
                    app:layout_constraintStart_toStartOf="parent" />

                <Button
                    android:id="@+id/button8"
                    style="@style/ButtonStyle"
                    android:text="@string/button8"
                    app:layout_constraintHorizontal_weight="2.5"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/button9"
                    app:layout_constraintStart_toEndOf="@id/button7" />

                <Button
                    android:id="@+id/button9"
                    style="@style/ButtonStyle"
                    android:text="@string/button9"
                    app:layout_constraintHorizontal_weight="2.5"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/button_c"
                    app:layout_constraintStart_toEndOf="@id/button8" />

                <Button
                    android:id="@+id/button_c"
                    style="@style/ButtonStyle.color"
                    android:text="@string/buttonC"
                    app:layout_constraintHorizontal_weight="2.5"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/button9" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/linearlayout3"
                style="@style/LinearLayoutStyle"
                app:layout_constraintVertical_weight="2.5"
                app:layout_constraintTop_toBottomOf="@id/linearlayout2"
                app:layout_constraintBottom_toTopOf="@id/linearlayout4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <Button
                    android:id="@+id/button4"
                    style="@style/ButtonStyle"
                    android:text="@string/button4"
                    app:layout_constraintHorizontal_weight="2.5"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/button5"
                    app:layout_constraintStart_toStartOf="parent" />

                <Button
                    android:id="@+id/button5"
                    style="@style/ButtonStyle"
                    android:text="@string/button5"
                    app:layout_constraintHorizontal_weight="2.5"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/button6"
                    app:layout_constraintStart_toEndOf="@id/button4" />

                <Button
                    android:id="@+id/button6"
                    style="@style/ButtonStyle"
                    android:text="@string/button6"
                    app:layout_constraintHorizontal_weight="2.5"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/button_minus"
                    app:layout_constraintStart_toEndOf="@id/button5" />

                <Button
                    android:id="@+id/button_minus"
                    style="@style/ButtonStyle.color"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_weight="2.5"
                    app:layout_constraintStart_toEndOf="@id/button6"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="SpeakableTextPresentCheck" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/linearlayout4"
                style="@style/LinearLayoutStyle"
                app:layout_constraintVertical_weight="2.5"
                app:layout_constraintTop_toBottomOf="@id/linearlayout3"
                app:layout_constraintBottom_toTopOf="@id/linearlayout5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <Button
                    android:id="@+id/button1"
                    style="@style/ButtonStyle"
                    android:text="@string/button1"
                    app:layout_constraintHorizontal_weight="2.5"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/button2"
                    app:layout_constraintStart_toStartOf="parent" />

                <Button
                    android:id="@+id/button2"
                    style="@style/ButtonStyle"
                    android:text="@string/button2"
                    app:layout_constraintHorizontal_weight="2.5"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/button3"
                    app:layout_constraintStart_toEndOf="@id/button1" />

                <Button
                    android:id="@+id/button3"
                    style="@style/ButtonStyle"
                    android:text="@string/button3"
                    app:layout_constraintHorizontal_weight="2.5"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/button_add"
                    app:layout_constraintStart_toEndOf="@id/button2" />

                <Button
                    android:id="@+id/button_add"
                    style="@style/ButtonStyle.color"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_weight="2.5"
                    app:layout_constraintStart_toEndOf="@id/button3"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="SpeakableTextPresentCheck" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/linearlayout5"
                style="@style/LinearLayoutStyle"
                app:layout_constraintVertical_weight="2.5"
                app:layout_constraintTop_toBottomOf="@id/linearlayout4"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <Button
                    android:id="@+id/button00"
                    style="@style/ButtonStyle"
                    android:text="@string/button00"
                    app:layout_constraintHorizontal_weight="2.5"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/button0"
                    app:layout_constraintStart_toStartOf="parent" />

                <Button
                    android:id="@+id/button0"
                    style="@style/ButtonStyle"
                    android:text="@string/button0"
                    app:layout_constraintHorizontal_weight="2.5"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/button_dot"
                    app:layout_constraintStart_toEndOf="@id/button00" />

                <Button
                    android:id="@+id/button_dot"
                    style="@style/ButtonStyle"
                    android:text="@string/button."
                    app:layout_constraintHorizontal_weight="2.5"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/button_x"
                    app:layout_constraintStart_toEndOf="@id/button0" />

                <Button
                    android:id="@+id/button_x"
                    style="@style/ButtonStyle.color"
                    android:text="@string/buttonX"
                    app:layout_constraintHorizontal_weight="2.5"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/button_dot" />

            </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</merge>