<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/linearLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color" >

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/refresh"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintVertical_weight="2.5"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/textView"
        app:layout_constraintEnd_toEndOf="parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:scrollbars="none">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <ImageView
                    android:id="@+id/imageView1"
                    style="@style/ImageViewStyle"
                    android:contentDescription="@string/app_name"
                    app:layout_constraintHorizontal_weight="1.2"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/countryText1"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/countryText1"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:gravity="top"
                    android:maxWidth="165dp"
                    android:maxLength="23"
                    android:maxLines="2"
                    android:text="@string/country"
                    android:textColor="@color/text_color"
                    android:textSize="20sp"
                    app:drawableEndCompat="@drawable/ic_chevron_right_48px"
                    app:layout_constraintHorizontal_weight="5.8"
                    app:layout_constraintStart_toEndOf="@id/imageView1"
                    app:layout_constraintEnd_toStartOf="@id/amountText1"
                    app:layout_constraintTop_toTopOf="parent"/>

                <TextView
                    android:id="@+id/amountText1"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginBottom="10dp"
                    android:autoSizeTextType="uniform"
                    android:gravity="center_vertical|end"
                    android:maxWidth="120dp"
                    android:maxLength="15"
                    android:maxLines="1"
                    android:minWidth="120dp"
                    android:text="@string/amount"
                    android:textColor="@color/text_color"
                    android:textSize="30sp"
                    app:layout_constraintHorizontal_weight="3"
                    app:layout_constraintStart_toEndOf="@id/countryText1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/imageView2"
                    style="@style/ImageViewStyle"
                    android:contentDescription="@string/app_name"
                    app:layout_constraintHorizontal_weight="1.2"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/countryText2"
                    app:layout_constraintTop_toBottomOf="@id/imageView1" />

                <TextView
                    android:id="@+id/countryText2"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:gravity="top"

                    android:maxWidth="165dp"
                    android:maxLength="23"
                    android:maxLines="2"

                    android:text="@string/country"
                    android:textColor="@color/text_color"
                    android:textSize="20sp"
                    app:drawableEndCompat="@drawable/ic_chevron_right_48px"
                    app:layout_constraintHorizontal_weight="5.8"
                    app:layout_constraintStart_toEndOf="@id/imageView2"
                    app:layout_constraintEnd_toStartOf="@id/amountText2"
                    app:layout_constraintTop_toBottomOf="@id/countryText1" />

                <TextView
                    android:id="@+id/amountText2"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginBottom="10dp"
                    android:autoSizeTextType="uniform"
                    android:gravity="center_vertical|end"
                    android:maxWidth="120dp"
                    android:maxLines="1"

                    android:minWidth="120dp"

                    android:text="@string/amount"
                    android:textColor="@color/text_color"
                    android:textSize="30sp"
                    app:layout_constraintHorizontal_weight="3"
                    app:layout_constraintStart_toEndOf="@id/countryText2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/amountText1" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/data_provider"
        android:textColor="@color/description_text_color"
        app:tabTextAppearance="@style/TextAppearance.AppCompat.Small"
        app:layout_constraintVertical_weight="0.5"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/refresh"
        app:layout_constraintBottom_toTopOf="@id/layout"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintVertical_weight="7"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <include
            layout="@layout/content_main" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>